Revision history for WebService-NotifyMyAndroid

{{$NEXT}}
    Add explicit use of LWP::Protocol::https

0.0.5_02  2012-12-29 11:06:29 Europe/London
      Fix issues with Dist::Zilla conversion

0.0.5_01  2012-12-26 15:49:16 Europe/London
      Convert to Dist::Zilla

0.0.4
       FIX: :utf8 --> :encoding(UTF-8)

0.0.3  Fri Dec 21 10:26:16 2012 +0000
       Fix the API URL <Chisel>
       Add dependency: LWP::Protocol::https <Chisel>
       Add reminder for lib*-dev packages <Chisel>
       Add demo script for NMA <Chisel>
       POD: Add Chisel as contributor <Chisel>

0.0.2  Mon Jul  4 08:38:20 2011
       Renamed to 'WebService-NotifyMyAndroid'.
       Added a README.
       Captured additional test dependencies to make CPANTS happy.

0.0.1  Mon Jun 20 11:43:25 2011
       Initial release.
