@@ -1,6 +1,9 @@
 #!perl
 
-if (!require Test::Perl::Critic) {
+use Test::More;
+
+eval "use Test::Perl::Critic";
+if ($@) {
     Test::More::plan(
         skip_all => "Test::Perl::Critic required for testing PBP compliance"
     );
